[package]
name = "libxivdat"
version = "0.2.0"
edition = "2018"
license = "Apache-2.0"
description = "Read & write Final Fantasy XIV .DAT files."
keywords = ["xiv", "io", "file", "dat", "config"]
categories = ["encoding", "filesystem"]
authors = ["Carrie J V <carrie@carriejv.com"]
homepage = "https://github.com/carriejv/libxivdat"
repository = "https://github.com/carriejv/libxivdat"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[lib]
name = "libxivdat"
path = "src/lib.rs"
edition = "2018"
crate-type = ["lib"]
test = true
doctest = true
doc = true
harness = true

[features]
high-level = []
macro = ["high-level"]

[dependencies]

[dev-dependencies]
tempfile = "3.2.0"
